# material-rs

./: Cargo.toml  README.md  dev.sh
.github/workflows/: deploy.yml
apps/documentation/: Cargo.toml  index.html  wrangler.toml
apps/documentation/src/: app_context.rs  lib.rs  main.rs  routes.rs
apps/documentation/src/pages/: accordions.rs  alert_box_page.rs  avatars_shapes.rs  badges.rs  bottom_sheet_page.rs  box_page.rs  breadcrumb_page.rs  buttons_page.rs  cards.rs  carousel_page.rs  chips.rs  code_view_page.rs  container_page.rs  dialog_page.rs  divider_page.rs  grid_page.rs  home.rs  icon_page.rs  image_list_page.rs  list_page.rs  menu_page.rs  mod.rs  navigation_bar_page.rs  navigation_drawer_page.rs  navigation_rail_page.rs  not_found.rs  progress_page.rs  ripple_page.rs  select_textarea.rs  selection.rs  shape_gallery.rs  showcase_admin.rs  showcase_blog.rs  showcase_ecommerce.rs  showcase_email.rs  showcase_login.rs  showcase_settings.rs  skeleton_page.rs  slider.rs  snackbar_page.rs  (+13 more)
apps/documentation/src/pages/landing/: mod.rs
