[workspace]
members = ["apps/documentation", "packages/core"]
resolver = "3"

[workspace.dependencies]
yew = { version = "0.23", features = ["csr", "hydration"] }
material-rs = { path = "./packages/core" }
stylist = { version = "0.15", features = ["yew", "yew_use_style", "yew_integration","parser", "ssr", "hydration"] }
web-sys = "0.3.103"
gloo-timers = "0.4.0"
wasm-bindgen = "0.2.126"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
material-color-utils = { version = "0.1.3", default-features = false }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true